wandb/run-20190725_215038-9p1zuci5/output.log
  File "audio.py", line 65
    model.add(Dropout(0.2))
        ^
SyntaxError: invalid syntax
